objects/candidate__c.object
<CustomObject>
    <customHelpPage>Job_candidate_Help</customHelpPage>
    <description>people who have applied for a particular job</description>
    <fields>
        <fullName>Email_id__c</fullName>
        <label>Email id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expected_salary__c</fullName>
        <label>Expected salary</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospect_Rating__c</fullName>
        <description>Indicates how closely a person fits the job</description>
        <inlineHelpText>How well does this candidate fits this job?</inlineHelpText>
        <label>Prospect Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cool</fullName>
                </value>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Manager Favorite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>candidate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email_id__c</columns>
        <columns>Expected_salary__c</columns>
        <columns>Prospect_Rating__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>